Add transformer: visitor that mutates the AST in place.
The intent is to use it instead of the cloner to transform AST in rescoping,
binding. Since it doesn't duplicate the AST, the transformer should be more
optimus ... erh, optimal.

	* dev/ast-transformer-gen: New: generate the transformer visitor.
	* dev/ast-gen.mk,
	* src/ast/local.mk,
	* dev/local.mk: Build and generate it.
	* src/ast/.gitignore: Ignore generated files.
	* src/ast/ast.yml: Add const-ref accessors for transformed attributes.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -183,9 +183,9 @@ if.hh~
 if.hxx
 if.hxx~
 ignores
-ignores~
 ignores.stamp
 ignores.stamp~
+ignores~
 implicit.cc
 implicit.cc~
 implicit.hh
@@ -394,6 +394,11 @@ throw.hh
 throw.hh~
 throw.hxx
 throw.hxx~
+transformer.cc
+transformer.cc~
+transformer.hh
+transformer.hh~
+transformer.stamp
 try.cc
 try.cc~
 try.hh
