--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@
 /sdk
 /share/urbi/tutorial-content.u
 /src/Makefile.in
+/src/ast/transformer.cc
+/src/ast/transformer.cc~
+/src/ast/transformer.hh
+/src/ast/transformer.hh~
+/src/ast/transformer.stamp
 /src/include
 /src/kernel/config.h.in
 /src/lib
