ast: fuse Closure and Function into Routine.
	* src/ast/ast.yml (Routine.closure): New.
	(Function, Closure): Remove.
	* src/ast/.gitignore: Regen.
	* src/binder/binder.hh, src/binder/binder.cc,
	* src/flower/flower.hh, src/flower/flower.cc,
	* src/object/code.cc, src/parser/ast-factory.cc,
	* src/runner/interpreter-apply.cc, src/runner/interpreter-visit.hxx,
	* src/runner/interpreter.hh:
	Adjust.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -866,6 +866,9 @@ MetaArgs:
 Routine:
   super: Exp
   attributes:
+    - closure:
+        type: bool
+        desc: Whether is a closure, or a function.
     - formals:
         type: 'local_declarations_type*'
         mandatory: False
@@ -905,23 +908,13 @@ Routine:
             return formals_;
           }
   printer:
+    - '(n->closure_get() ? "closure" : "function")'
+    - '" "'
     - '{
          if (n->formals_get())
            ostr_ << "(" << *n->formals_get() << ") ";
        }'
     - ~body
-
-Function:
-  super: Routine
-  printer:
-    - '"function "'
-    - '{ visit(static_cast<const Routine*>(n)); }'
-
-Closure:
-  super: Routine
-  printer:
-    - '"closure "'
-    - '{ visit(static_cast<const Routine*>(n)); }'
 
 LocalWrite:
   super: Exp
