doc: prefer assert ( == ) in the output, assert_eq in the tests..
	* doc/tex2chk: Convert assert ( == ) to assert_eq.

	* doc/faq.tex, doc/specs/boolean.tex, doc/specs/dictionary.tex,
	* doc/specs/float.tex, doc/specs/lang.tex, doc/specs/list.tex,
	* doc/specs/object.tex, doc/specs/stdlib.tex, doc/specs/string.tex,
	* doc/tutorial/tutorial.tex, doc/urbi-sdk.tex: Adjust.
	And fixes.

	* share/urbi/dictionary.u ([]=): Return the assigned value, not
	the dictionary.
	* tests: Adjust.

	* doc/Makefile.am (CHECK_CLEANFILES): Clean all the *.chk.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -16,6 +16,10 @@ EXTRA_DIST += $(PDF_IMAGES) $(call ls_files,img/*.png)
 EPS_IMAGES = $(PDF_IMAGES:.pdf=.eps)
 CLEANFILES += $(EPS_IMAGES)
 
+# Our system leaves trailing unused *chk files.
+CHECK_CLEANFILES +=						\
+  $(shell find $(srcdir) -name '*.chk' -or -name 'test.chk')
+
 # Find urbi-report.sty, and workaround some strange behavior of
 # texi2dvi that wants to play tricks with ~ (which becomes a tilda,
 # instead of a nonbreakable space).
