build: fix again.
	* configure.ac (INSTALL_EXECENV_BEFORE_LIB): New.
	* src/libuobject/local.mk: Use it.
	(execenvdir): New.
	Use it.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -183,4 +183,8 @@ AC_CONFIG_FILES([src/tests/bin/urbi-launch$EXEEXT:src/tests/bin/urbi-launch.in],
                 [chmod +x src/tests/bin/urbi-launch$EXEEXT],
                 [EXEEXT=$EXEEXT])
 
+# Additional dependencies.
+AC_SUBST([INSTALL_EXECENV_BEFORE_LIB],
+         [install-execenvLTLIBRARIES: install-libLTLIBRARIES])
+
 AC_OUTPUT
