Get rid of bsdnet: use libport::asio.
	* .bootstrap.cfg: remove link to bsdnet.
	* sdk-remote: update.
	* src/Makefile.am: remove bsdnet.
	* src/console-server.cc: here.
	* src/kernel/connection.cc: New.
	* src/kernel/connection.hh: New.
	* src/kernel/local.mk: add 2 files above.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -98,11 +98,7 @@ include urbi/local.mk
 urbiinclude_HEADERS = $(uobject_headers)
 
 dist_libuobject_la_SOURCES +=			\
-  console-server.cc				\
-  lib/network/bsdnet/connection.hh		\
-  lib/network/bsdnet/connection.cc		\
-  lib/network/bsdnet/network.hh			\
-  lib/network/bsdnet/network.cc
+  console-server.cc
 
 # We used to install a different version (with s/remote/engine/g), but
 # there is no occurrence of remote in param.mk.  Yet MN insists on
