Revamp UObject backend.
The idea is to no longer have multiple implementations(plugin, remote) of
any symbol.

Now, all methods bounce to methods of UObjectImpl, UContextImpl, UVarImpl
and UGenericCallbackImpl.
All methods that were in the urbi namespace are now in the UContext class,
bouncing to UContextImpl virtual methods. UVar and UObject are inheriting from
UContext, so code that used those methods will still work.
Also, those methods were kept in the urbi namespace, bouncing to
getCurrentContext() which is thread safe and filled before invoking user
code.

	* configure.ac: Add BOOST_THREAD (for thread local storage).
	* include/urbi/fwd.hh: Add Impl classes.
	* include/urbi/uabstractclient.hh: unarmorAndSend takes a
	UAbstractClient defaulting to getDefaultClient().
	* src/liburbi/uabstractclient.cc (unarmorAndSend): Adapt.
	* include/urbi/ucallbacks.hh.template: .
	* include/urbi/ucontext-factory.hh: New.
	* include/urbi/ucontext-impl.hh: New.
	* include/urbi/ucontext.hh: New.
	* include/urbi/ucontext.hxx: New.
	* include/urbi/uobject-hub.hh: .
	* include/urbi/uobject.hh: .
	* include/urbi/uobject.hxx: .
	* include/urbi/ustarter.hh: .
	* include/urbi/ustarter.hxx: .
	* include/urbi/utable.hh: .
	* include/urbi/utimer-callback.hh: .
	* include/urbi/uvar.hh: .
	* include/urbi/uvar.hxx: .
	* src/examples/urbi-image.cc: .
	* src/libuco/local.mk: .
	* src/libuco/shared-library-checker.cc: .
	* src/libuco/uobject-common.cc: .
	* src/libuco/uobject-hub-common.cc: .
	* src/libuco/ustarter.cc: .
	* src/libuco/utable.cc: .
	* src/libuco/uvar-common.cc: .
	* src/libuobject/main.cc: Update startup procedure.
	* src/libuobject/remoteucontextimpl.hh: New.
	* src/libuobject/ucallbacks.cc: .
	* src/libuobject/uobject.cc: .
	* src/libuobject/utimer-callback.cc: .
	* src/libuobject/uvar.cc: .
	* src/uobjects/all.uob/all.cc: .

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -47,6 +47,7 @@ BOOST_REQUIRE([1.35])
 URBI_SOCKETS
 URBI_LIBPORT([libport])
 
+BOOST_THREADS
 # X11.
 # AC_PATH_XTRA finds X11 headers even if cross-compiling to windows.
 case $ac_cv_host in
