doc: some code for UObject quick start.
	* configure.ac: Create doc/config.sty.
	* doc/urbi-sdk.tex: Use it.
	* doc/uobject/quick-start.tex: Include the factory sources.
	* doc/uobject/uobject.tex: Fix label.

--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,7 @@ URBI_PACKAGE_KIND([kernel])
 URBI_DIRS([engine])
 
 URBI_DOC
+AC_CONFIG_FILES([doc/config.sty])
 
 ## ------------- ##
 ## Compilation.  ##
