--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,11 @@
 /doc/Makefile.in
 /doc/tests/faq/
 /doc/tests/installation/
+/doc/tests/introduction/
 /doc/tests/k1-to-k2/
 /doc/tests/specs/
 /doc/tests/tutorial/
+/doc/tests/uobject/
 /doc/tests/urbi-sdk/
 /lib
 /lib/network
