server: support a (stupid) locking system.
We were asked for a simple lock system.  This one does not even try to
depend on the machine (say via MAC address).

	* urbi-sdk.key: New.
	* Makefile.am: Ship it.
	* src/kernel/generate-urbi-sdk-key-hh,
	* src/kernel/lock.hh, src/kernel/lock.cc: New.
	* src/kernel/local.mk: Adjust.
	* src/kernel/userver.cc: Use them.

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,8 @@ include dev/local.mk
 include include/local.mk
 include share/urbi/local.mk
 
+EXTRA_DIST += urbi-sdk.key
+
 # Make sure the packaging script is up-to-date.
 all-local: scripts/package
 
