make check-doc.
	* Makefile.am (check-doc): New.
	(check-%): Go into all the test suite dirs.
	* doc/tests/local.mk (just-check): New.

--- a/Makefile.am
+++ b/Makefile.am
@@ -85,13 +85,21 @@ check-buildfarm:
 check-sdk-uobjects-buildfarm:
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src/tests check-uobjects $(CHECK_BUILDFARM_FLAGS)
 
+# Run just the doc test suite, without building again the PDF.
+check-doc:
+	$(MAKE) $(AM_MAKEFLAGS) -C doc just-check
+
+
 # check-html, check-clean, check-uob etc.
 # Last in order to avoid hiding the previous rules.
 check-%:
+	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src/tests $@
 	$(MAKE) $(AM_MAKEFLAGS) -C tests $@
+	$(MAKE) $(AM_MAKEFLAGS) -C doc $@
 recheck recheck-html:
 	$(MAKE) $(AM_MAKEFLAGS) -C sdk-remote/src/tests $@
 	$(MAKE) $(AM_MAKEFLAGS) -C tests $@
+	$(MAKE) $(AM_MAKEFLAGS) -C doc $@
 
 
 ## -------- ##
