Bind boost::regex.
	* src/object/regexp.cc,
	* src/object/regexp.hh: New.
	* src/object/local.mk: Build it.
	* src/object/fwd.hh: Register it.
	* configure.ac,
	* src/Makefile.am: Link with boost regexp.

--- a/configure.ac
+++ b/configure.ac
@@ -112,8 +112,9 @@ URBI_ARG_ENABLE([enable-programs],
                 [Build extra programs], [yes|no], [no])
 AM_CONDITIONAL([BUILD_PROGRAMS],
                [test x$enable_programs = xyes])
-BOOST_TOKENIZER
+BOOST_REGEX
 BOOST_SYSTEM
+BOOST_TOKENIZER
 
 
 ## -------------- ##
