build: bootstrap.mk.
	* sdk-remote: Update to get it.
	* Makefile.am: Use it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,8 @@ include build-aux/init.mk
 include build-aux/package-version.mk
 include build-aux/build-aux.mk
 include build-aux/build-farm.mk
+BOOTSTRAP_CFG = .bootstrap.cfg
+include build-aux/bootstrap.mk
 
 ACLOCAL_AMFLAGS = -I build-aux -I tests/m4
 
